Creating the properties and users API endpoints

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ django = "*"
 pillow = "*"
 mysqlclient = "*"
 python-dotenv = "*"
+django-filter = "*"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 
