--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ mysqlclient = "*"
 python-dotenv = "*"
 django-filter = "*"
 djangorestframework-simplejwt = "*"
+requests = "*"
+python-dateutil = "*"
 
 [dev-packages]
 
